java/java-tests/testData/codeInsight/daemonCodeAnalyzer/genericsHighlighting/IllegalForwardReferenceInTypeParameterDefinition.java
class A<T extends <error descr="Illegal forward reference">S</error>, S> {
}